--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,8 @@ input[type="file"] {
       background-clip: text;
     }
   }
+  @media screen and (max-width: 1200px) {
+    .logo{
+        display:none;
+    }
+  }
